<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_countwins"
        android:title="@string/action_countwins"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_countloses"
        android:title="@string/action_countloses"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_countdraws"
        android:title="@string/action_countdraws"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_reset"
        android:title="@string/action_reset"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_choose_color"
        android:title="@string/action_choose_color"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_on_off_music"
        android:title="@string/action_on_off_music"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>
